<?xml version="1.0"?>
<package format="2">
  <name>hrpsys_ext_rtc</name>
  <version>0.0.0</version>
  <description>The hrpsys_ext_rtc package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>EPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>
  <depend>hrpsys</depend>
  <depend>choreonoid</depend>
  <depend>joint_limit_table</depend> <!-- for SoftErrorLimiter2 -->
  <depend>choreonoid_qhull</depend> <!-- for CollisionDetector2 -->
  <depend>choreonoid_vclip</depend> <!-- for CollisionDetector2 -->
</package>
